2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* doc/NEWS.txt: Initialize for 3.1.x.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Release version 3.1.

	* build-aux/package_version: Update to 3.1.

	* doc/NEWS.txt: Document recent changes.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Packaging fixes.
	
	* lib/Makefile.am (nobase_dist_pkgdata_DATA): Remove duplicate.
	* lib/src/tlsmalloc/Makefile.am: List `tls_arch_pthreads.h' and
	`tlsconfig.h'.
	* tools/lib/Makefile.am (nobase_python_PYTHON): List `am'.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix library build.
	
	* lib/src/getenv.c,
	* lib/src/gdtoa/gdtoaimpl.h: Use `malloc' and `free' instead of
	`fast_malloc' and `fast_free'.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the TLS memory allocator.

	* lib/src/tlsmalloc/tlsconfig.h,
	* lib/src/tlsmalloc/tlsmalloc.c: Optimize bin selection by using
	compiler built-in bit count operations.

	* lib/src/tlsmalloc/tlsmcheck.c: Update accordingly.

	* lib/src/tlsmalloc/tlsmalloc.c (free_superblock): Fix bug where
	too many superblocks would be released.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fixes to quiet compiler warnings.

	* lib/src/strncmp.c,
	* lib/src/vprintf.c: Use the standard C header names.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make the TLS memory allocator the default allocator on MT-Alpha.

	* lib/src/malloc_wrappers.c: Remove.
	
	* lib/mtalpha.mk: Do not build the dlmalloc wrappers any
	more. Compile `tlsmalloc' and rename the services to their
	standard C names.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the TLS memory allocator.

	* lib/mtalpha-sim/include/stdlib.h: Rename the `fast_XXX' macros
	to `excl_dlXXX' to clarify their meaning.

	* lib/src/tlsmalloc/tls_arch_mtalpha.h: Use them. Also, use the
	new MGSim mmap/munmap interface to manage storage.

	* lib/src/tlsmalloc/tlsmalloc.c: Place the count of superblocks at